fix: updated header and footer alignment and layout

--- a/frontend/src/components/admin/AdminHome.css
+++ b/frontend/src/components/admin/AdminHome.css
@@ -6,28 +6,30 @@
   border-radius: 1em;
   background: white;
   height: 15vw;
-  max-height: 15vw;
   width: 20vw;
-  max-width: 20vw;
-  margin-bottom: 1vw;
-  margin-left: 2vw;
+  margin: 1em;
+  overflow: hidden;
 }
 
 .adminbutton:hover{
   color: white;
   background: #47abd8;
+  cursor: pointer;
+  transition: ease 0.20s;
 }
 
 .bg{
   background-image: url('../../assets/adminBackground.png');
   background-repeat: no-repeat;
   background-size: auto;
+  background-position: center;
 }
 
 .bg-container{
   display: flex;
   flex-direction: column;
 }
+
 .nav-container{
   display: flex;
   margin: auto;
@@ -35,10 +37,8 @@
 }
 
 .tile{
-  height: 200vw;
-  max-height: 15vw;
-  width: 60vw;
-  max-width: 60vw;
+  height: 20vw;
+  width: 65vw;
   margin-top: 1em;
   margin-bottom: 1em;
   display: flex;
