--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -39,6 +39,8 @@ hr {
 .column{
     display: flex;
     flex-direction: column;
+    text-align: left;
+    
 }
 
 .category-row{
@@ -52,11 +54,13 @@ hr {
     width: 20vw;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
+    align-content: left;
 }
 
 .category-title{
     margin-bottom: 0;
     font-size: 1.3em;
+    text-align: left;
 }
 
 .placeholder-ilib-logo{
@@ -64,7 +68,9 @@ hr {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bolder;
     color: white;
-    margin: 0.5em 0.5em 0.5em 10vw;
+    text-align: left;
+    margin-left: 10vw;
+    margin-bottom: 0.5vw;
 }
 
 @media (max-width: 880px) {
