--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -22,15 +22,14 @@
 
 .Header-container {
     display: grid;
-    border: 1px solid red;
+    border-bottom: 1px solid #95d2ec;
     grid-template-columns: auto auto auto;
     /* column-gap: 10cm; */
 }
 
 .Header-container-left {
-    display: inline-grid;
-    grid-template-columns: auto auto auto;
-    column-gap: 1cm;
+    margin-left: 5vw;
+    display: flex;
 }
 
 .Header-container-right {
@@ -39,5 +38,15 @@
     right: 0px;
     position: absolute;
     grid-template-columns: auto auto auto;
-    column-gap: 1cm;
+    margin-right: 5vw;
+}
+
+.Button{
+   color: #47abdb;
+   margin: 1vw;
+   height: 3.5vw;
+   max-height: 3.5vw;
+   width: 6vw;
+   max-width: 6vw; 
+   margin-right: 2vw;
 }
